<resources>
    <string name="app_name">TwitterCounter</string>
    <string name="app_title">Twitter character count</string>
    <string name="twitter_logo_desc">Twitter logo</string>
    <string name="characters_typed">Characters Typed</string>
    <string name="characters_remaining">Characters Remaining</string>
    <string name="hint_tweet">Start typing! You can enter up to 280 characters</string>
    <string name="copy_text">Copy Text</string>
    <string name="clear_text">Clear Text</string>
    <string name="post_tweet">Post tweet</string>
</resources>